# Forust

./: .env  Cargo.toml  README.md  comunidade.html  docker-compose.yml  index.html
migrations/: 20231104021416_init.sql  20231205155707_seed.sql  forustdb.sql
src/: app_state.rs  lib.rs  main.rs
src/auth/: api.rs  auth_api.rs  middleware.rs  mod.rs  structs.rs  structs_api.rs  view.rs
src/comment/: api.rs  structs.rs  view.rs
src/community/: api.rs  mod.rs  structs.rs  view.rs
src/component/: cookie.rs  form.rs  middleware.rs  mod.rs  page.rs  ranking.rs  structs.rs
src/home/: mod.rs
src/post/: api.rs  mod.rs  structs.rs  view.rs
src/profile/: api.rs  mod.rs  structs.rs  view.rs
