[package]
name = "static_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
maud = { version = "0.25.0", features = ["axum"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql", "time", "migrate" ] }
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
serde = "1.0.190"
